# TortoiseGit-AI

./: .gitignore  Program.cs  README.md  TortoiseGitAI.csproj  TortoiseGitAI.sln
.github/workflows/: release-cpp.yml  release.yml
cpp/: CMakeLists.txt
cpp/src/: main.cpp
vcpkg/: bootstrap-vcpkg.bat
